# migasfree-backend

./: .env.template  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPRECATION.md  Dockerfile  MANIFEST.in  ONBOARDING.md  README.md  compose.yaml  manage.py  migasfree-backend.doap  migasfree-frontend.ep  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: django.yml
docs/: index.md
docs/explanation/: architecture.md  core-concepts.md  mgi-golden-images.md  project-structure.md
docs/how-to/: add-new-pms.md  install-production.md  run-tests.md  set-up-dev-env.md
docs/reference/: api.md  configuration.md  data-model.md
docs/tutorials/: getting-started.md
migasfree/: __init__.py  asgi.py  celery.py  celery_app.py  fixtures.py  mixins.py  model_update.py  paginations.py  schema.py  secure.py  urls.py  utils.py  version.py  wsgi.py
migasfree/api_v4/: __init__.py  api.py  apps.py  errmfs.py  secure.py  urls.py
migasfree/api_v4/api/: __init__.py  computer.py  deprecated.py  faults.py  helpers.py  inventory.py  keys.py  packages.py  repositories.py  sync.py  tags.py
migasfree/api_v4/views/: __init__.py  client_api.py  public_api.py
migasfree/app_catalog/: __init__.py  admin.py  apps.py  filters.py  models.py  resources.py  routers.py  safe.py  schema.py  serializers.py  views.py
migasfree/app_catalog/fixtures/: category.json
migasfree/app_catalog/migrations/: 0001_initial.py  0002_alter_comments.py  0003_add_gin_indexes.py  0004_alter_application_icon.py  0005_alter_policygroup_policy.py
migasfree/app_catalog/tests/: test_schema.py
migasfree/client/: __init__.py  admin.py  apps.py  consumers.py  filters.py  messages.py  permissions.py  resources.py  routers.py  routing.py  saturation.py  schema.py  serializers.py  tasks.py  urls.py
migasfree/client/fixtures/: fault_definition.json
migasfree/client/migrations/: 0001_initial.py  0002_alter_comments.py  0003_add_synchronization_to_errors_and_faults.py  0004_add_gin_indexes.py  0005_alter_computer_status_alter_statuslog_status.py
migasfree/client/models/: __init__.py  computer.py  error.py  event.py  fault.py  fault_definition.py  message.py  migration.py  notification.py  package.py  package_history.py  status_log.py  synchronization.py  user.py
migasfree/client/schema/: __init__.py  computer.py  device.py  error.py  fault.py  query.py  software.py
migasfree/client/tests/: test_schema.py
migasfree/client/views/: __init__.py  public.py  safe.py  sync.py  token.py
migasfree/core/: __init__.py  admin.py  apps.py  decorators.py  fields.py  filters.py  forms.py  mixins.py  permissions.py  resources.py  routers.py  schema.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py  widgets.py
migasfree/core/admin/: __init__.py  attribute.py  deployment.py  domain.py  package.py  project.py  property.py  schedule.py  user.py
migasfree/core/fixtures/: attribute.json  property.json  schedule.json  schedule_delay.json
migasfree/core/migrations/: 0001_initial.py  0002_singularity.py  0003_alter_singularity.py  0004_alter_property.py  0005_alter_comments.py  0006_deployment_project.py  0007_alter_project_pms.py  0008_alter_package_fullname_alter_package_name.py  0009_alter_deployment_start_date_alter_project_pms.py  0010_alter_attribute_table_comment_and_more.py  0011_remove_project_base_os.py
migasfree/core/models/: __init__.py  attribute.py  attribute_set.py  deployment.py  domain.py  migas_link.py  package.py  package_set.py  platform.py  project.py  property.py  release.py  repository.py  schedule.py  schedule_delay.py  scope.py  set_of_attributes.py  singularity.py  store.py  user_profile.py
migasfree/core/pms/: __init__.py  apk.py  apt.py  dnf.py  pacman.py  pms.py  tasks.py  winget.py  wpt.py  yum.py  zypper.py
migasfree/core/schema/: __init__.py  attribute.py  deployment.py  project.py  query.py
migasfree/device/: __init__.py  admin.py  apps.py  filters.py  resources.py  routers.py  safe.py  schema.py  serializers.py  views.py
migasfree/hardware/: __init__.py  admin.py  apps.py  filters.py  routers.py  schema.py  serializers.py  tasks.py  views.py
migasfree/mci/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
migasfree/mgi/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
migasfree/settings/: __init__.py  base.py  celery.py  development.py  functions.py  migasfree.py  production.py
migasfree/stats/: __init__.py  apps.py  consumers.py  routers.py  routing.py  tasks.py  utils.py  validators.py  views.py
prd/: README.md
prd/appendix/: api-inventory.md  enum-dictionary.md  page-relationships.md
prd/pages/: 01-service-sync-flow.md  02-service-mtls-auth.md  03-service-graphql.md  04-service-celery-tasks.md  05-service-legacy-compat.md
requirements/: base.txt  base.txt # includes the base.txt  development.txt
stdeb.cfg.d/: Ubuntu  debian
tests/: test_api_v4.py  test_api_v4_functions.py  test_api_v4_secure.py  test_app_catalog.py  test_app_catalog_views.py  test_client_computer.py  test_client_computer_views.py  test_client_message_views.py  test_client_migration.py  test_client_package_history.py  test_client_public_views.py  test_client_synchronization.py  test_client_tasks.py  test_client_token_views.py  test_core_attribute.py  test_core_attribute_set.py  test_core_attributes_views.py  test_core_deployment.py  test_core_deployments_views.py  test_core_external_source_security.py  test_core_migas_link.py  test_core_package.py  test_core_platforms_views.py  test_core_project.py  test_core_schedules_views.py  test_core_users_views.py  test_device_capability_views.py  test_device_connection_views.py  test_device_device_views.py  test_device_logical_views.py  test_device_manufacturer_views.py  test_device_model_views.py  test_device_optimization.py  test_device_safe_logical_views.py  test_device_type_views.py  test_hardware_models.py  test_hardware_views.py  test_mgi_views.py  test_pms_apt.py  test_pms_notifications.py  (+16 more)
(+109 files in other folders)
