[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migasfree-backend"
dynamic = ["version"]
description = "migasfree-backend is a Django app to manage systems management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPLv3"}
authors = [
    {name = "Alberto Gacías", email = "alberto@migasfree.org"},
    {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "asgiref==3.11.1",
    "celery==5.6.3",
    "channels==4.3.2",
    "channels-redis==4.3.0",
    "daphne==4.2.1",
    "Django==5.2.13",
    "dj-rest-auth==7.2.0",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "django-import-export==4.4.0",
    "django-markdownx==4.0.9",
    "django-partial-content==0.9.4",
    "django-redis==6.0.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "djoser==2.3.3",
    "docutils==0.22.4",
    "drf-spectacular==0.29.0",
    "drf-spectacular-sidecar==2026.4.1",
    "graphene-django==3.2.3",
    "jwcrypto==1.5.6",
    "MarkupPy==1.18",
    "odfpy==1.4.1",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.11",
    "python-dateutil==2.9.0.post0",
    "python-magic==0.4.27",
    "PyYAML==6.0.3",
    "redis==7.4.0",
    "requests==2.33.1",
    "xlrd==2.0.2",
    "xlwt==1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.9",
    "django-debug-toolbar==6.3.0",
    "django-extensions==4.1",
    "django-silk==5.5.0",
    "pydot==4.0.1",
    "pyparsing==3.3.2",
    "pytest==9.0.2",
    "pytest-celery==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "sqlparse==0.5.5",
]

[project.urls]
Homepage = "https://migasfree.org/"
Repository = "https://github.com/migasfree/migasfree-backend/"

[tool.setuptools]
packages = {find = {where = ["."], include = ["migasfree*"]}}

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
migasfree = [
    "i18n/*/LC_MESSAGES/*.mo",
    "app_catalog/fixtures/*",
    "core/fixtures/*",
    "client/fixtures/*",
    "device/fixtures/*",
    "stats/management/commands/*",
    "VERSION"
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["build"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF012"
]

[tool.ruff.lint.per-file-ignores]
"migasfree/settings/*.py" = ["F403", "F405"]  # Allow star imports in Django settings

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
